--- a/source/_posts/gpce-2013.md
+++ b/source/_posts/gpce-2013.md
@@ -1,6 +1,7 @@
 ---
 title: "[GPCE '13] ShadowVM: Robust and Comprehensive Dynamic Analysis for the Java Platform"
 date: 2013-10-27 00:00:00
+comments: false
 tags: publication
 ---
 
