--- a/source/_posts/aosd-2012.md
+++ b/source/_posts/aosd-2012.md
@@ -1,6 +1,7 @@
 ---
 title: "[AOSD '12] DiSL: a Domain-Specific Language for Bytecode Instrumentation"
 date: 2012-03-25 00:00:00
+comments: false
 tags: publication
 ---
 
