--- a/source/_posts/rv-2016.md
+++ b/source/_posts/rv-2016.md
@@ -1,6 +1,7 @@
 ---
 title: "[RV '16] Extended Code Coverage for AspectJ-Based Runtime Verification Tools"
 date: 2016-09-23 00:00:00
+comments: false
 tags: publication
 ---
 
